# leadr-oss

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  example.env  pyproject.toml
.github/workflows/: build.yaml  ci.yaml  docs.yaml  migrations.yaml  release.yaml
alembic/: env.py
alembic/versions/: 20251106175222_22592df8d24d_add_accounts_and_users_tables.py  20251106180318_bc99a100eeb0_add_accounts_and_users_tables.py  20251107120402_70212c3f5490_add_api_keys_table.py  20251107130534_7d6e7dcb79c2_add_api_keys_table.py  20251107140038_d2b3610a95a3_add_soft_delete_to_accounts.py  20251107161927_63132b8795b5_add_soft_delete_to_api_keys.py  20251111121859_ed911ca5bddc_add_games_table.py  20251111133719_f1c65a42d27c_add_boards_table.py  20251111152151_e39a80493d94_add_scores_table.py  20251111173335_bc1ad0d69fd6_add_board_templates_table.py  20251111183333_4de10168f638_add_devices_and_device_sessions_tables.py  20251112130822_1fa66d6f6b4b_add_refresh_token_fields_to_device_.py  20251112131841_afee0c496a21_add_anti_cheat_enabled_to_games.py  20251112135251_12b367f5d9da_add_anti_cheat_tables.py  20251112135441_73540480ef92_add_nonces_table_for_replay_protection.py  20251112150829_f7c5f54c8e30_rename_user_id_to_device_id_in_score_.py  20251112152356_b4d77c391fd8_add_last_score_value_to_score_.py  20251112164335_04a38265d653_rename_scores_user_id_to_device_id.py  20251112175416_9296c489fd00_.py  20251112180520_c5d1d5a67269_remove_scores_user_id_fkey.py  20251112195703_2a37ba44ac19_add_super_admin_field_to_users.py  20251113091243_dc2ab243348c_add_user_id_to_api_keys.py  20251113180731_32e23fb2cb23_add_score_metadata_column.py
docker/: api.Dockerfile  docker-compose.dev.yml  init-db.sh
docs/: Patterns.md  client_auth.md  index.md
scripts/: build.sh  build_docs.sh  create_superadmin.py  dev.sh  fmt.sh  split_http_api.py  split_reference.py  start.sh  test.sh  transform_api_docs.py
src/api/: logging.yaml  main.py  middleware.py  routes.py
src/leadr/: config.py
src/leadr/auth/: bootstrap.py  dependencies.py
tests/: README.md  conftest.py  test_api_health.py  test_api_keys.py  test_database.py
tests/api/: test_authentication.py  test_authorization.py  test_middleware.py
(+156 files in other folders)
